# gpu-neural-network

./: .gitignore  CMakeLists.txt  Connects.cu  README.md  channel.cu  connects.cu  cuda.cu  cuda_neu.vcxproj  ee.exp  ee.lib  go.mod  inputs.cu  libmaxmul.exp  libmaxmul.lib  main.cu  main.go  mmmm.h  run.exp  run.lib  skia.cu  sktest.cu  structs.cu  test.cu  test.h  utils.cu  webcam.cu
image/: image.go
model/: Layer.go  model.go
neural/: skia.cu  utils.cu
window/: test.cpp  test.h  utils.cpp  utils.h  window.cpp  window.h
x64/Debug/: channel.cu.cache  channel.cu1749789714.deps  connects.cu.cache  cuda_neu.exe.recipe  cuda_neu.ilk  inputs.cu.cache  kernel.cu-1055685806.deps  kernel.cu.cache  main.cu.cache  main.cu94094034.deps  utils.cu.cache  utils.cu1766244668.deps
x64/Debug/cuda_neu.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  cuda_neu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog
